--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: vprofile actions
 on: workflow_dispatch
 env:
   AWS_REGION: us-east-1
-  ER_REPOSITORY: vprofileapp
+  ECR_REPOSITORY: vprofileapp
   EKS_CLUSTER: vprofile-eks
   
 jobs: 
@@ -61,7 +61,7 @@ jobs:
               uses: actions/checkout@v4
       
             - name: Build & Upload image to ECR
-              uses: appleboy/docker-ecr-action@master
+              uses: appleboy/docker-ecr-action@master 
               with:
                access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
                secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
